Fix bugs. Added more unit tests